# nvidia-smi-manager

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: copilot-instructions.md
nix/: default.nix
src/nv_smi_manager/cli/: __init__.py  commands.py
src/nv_smi_manager/core/: gpu_monitor.py  system_info.py
src/nv_smi_manager/utils/: formatters.py
src/nvidia_smi_manager/: __init__.py
src/nvidia_smi_manager/cli/: commands.py
src/nvidia_smi_manager/core/: config.py  gpu_control.py
tests/: test_gpu_control.py  test_gpu_monitor.py
